<resources>
    <string name="app_name">JAM</string>
    <string name="logo_intro">Rejoignez le monde du travail</string>
    <string name="logo_description">The principal logo of our application</string>
    <string name="login_username">Nom d\'utilisateur</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_btn_enter">Se connecter</string>
    <string name="login_pwd_reset">Mot de passe oublié ?</string>
    <string name="login_register">Nouveau ? S\'inscrire !</string>
    <string name="login_alt_conn_intro">Ou se connecter avec</string>
    <string name="login_copyright">JobAroundMe &#169; 2021</string>
    <string name="main_intro">Rejoignez le monde du travail avec plein d\'opportunités autour de vous</string>
    <string name="main_connect_intro">Se connecter</string>
    <string name="main_register_intro">Inscription</string>
    <string name="register_firstname">Prénom</string>
    <string name="register_lastname">Nom</string>
    <string name="register_email">Adresse courriel</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_alt_social_intro">s\'inscrire avec</string>
    <string name="reset_intro">Réinitialisation du mot de passe</string>
    <string name="reset_main_info">Saisissez votre pseudo</string>
    <string name="reset_main_btn">Vérifier</string>
    <string name="reset_main_input">Pseudo</string>
    <string name="title_activity_offers_list">Liste des offres</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_profile">Profil</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="title_activity_carte_emplois">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_job_details">Détails de l\'offre</string>
    <string name="reply_offer_btn_tag">Postuler</string>

    <string name="avatar_description">A default profile picture</string>
    <string name="logoff_btn_txt">Déconnexion</string>
    <string name="update_profile_btn_txt">Modifier</string>
    <string name="title_activity_job_map">Carte des emplois</string>
</resources>