<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PasswordResetFinalActivity">

    <TextView
        android:id="@+id/reset_page_intro_txt"
        android:layout_width="293dp"
        android:layout_height="36dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/reset_intro"
        android:textColor="#C4FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <ImageView
        android:id="@+id/reset_page_logo_img"
        android:layout_width="97dp"
        android:layout_height="72dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/reset_page_info_txt"
        android:layout_width="362dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="@font/yugothib"
        android:gravity="center_horizontal"
        android:text="@string/reset_main_info"
        android:textAlignment="center"
        android:textColor="#C8FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_page_intro_txt" />

    <EditText
        android:id="@+id/reset_page_main_input"
        android:layout_width="312dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/reset_main_input"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_page_info_txt" />

    <Button
        android:id="@+id/reset_page_main_btn"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_shape"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/yugothib"
        android:text="@string/reset_main_btn"
        android:textAllCaps="false"
        android:textColor="#A4090909"
        android:textSize="18sp"
        app:backgroundTint="#F2FFFFFF"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:iconTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_page_main_input" />

    <TextView
        android:id="@+id/reset_page_copyright_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/login_copyright"
        android:textColor="#C8FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_page_main_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>