<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SubscriptionActivity">

    <TextView
        android:id="@+id/register_page_intro_txt"
        android:layout_width="293dp"
        android:layout_height="36dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/logo_intro"
        android:textColor="#C4FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/register_page_logo_img"
        android:layout_width="97dp"
        android:layout_height="72dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/register_page_firstname_input"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/register_firstname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_intro_txt" />

    <EditText
        android:id="@+id/register_page_lastname_input"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/register_lastname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_firstname_input" />

    <EditText
        android:id="@+id/register_page_email_input"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_lastname_input" />

    <EditText
        android:id="@+id/register_page_password_input"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_email_input" />

    <Button
        android:id="@+id/register_page_main_btn"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_shape"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/yugothib"
        android:text="@string/main_register_intro"
        android:textAllCaps="false"
        android:textColor="#A4090909"
        android:textSize="18sp"
        app:backgroundTint="#F2FFFFFF"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:iconTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_password_input" />

    <TextView
        android:id="@+id/register_page_social_txt"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/yugothib"
        android:textColor="#C8FFFFFF"
        android:text="@string/register_alt_social_intro"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_main_btn"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/register_page_facebook_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showFacebookLoginPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_social_txt"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/register_page_google_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showGoogleLoginPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toEndOf="@+id/register_page_facebook_img"
        app:layout_constraintTop_toBottomOf="@+id/register_page_social_txt"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/register_page_copyright_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/login_copyright"
        android:textColor="#C8FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_facebook_img" />

</androidx.constraintlayout.widget.ConstraintLayout>