<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".controller.LoginActivity">

    <TextView
        android:id="@+id/login_page_copyright_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/login_copyright"
        android:textColor="#C8FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_main_btn" />

    <TextView
        android:id="@+id/login_page_social_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/login_alt_conn_intro"
        android:textColor="#C8FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_main_btn" />

    <ImageView
        android:id="@+id/login_page_logo_img"
        android:layout_width="97dp"
        android:layout_height="72dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login_page_pseudo_input"
        android:layout_width="370dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_logo_img" />

    <EditText
        android:id="@+id/login_page_password_input"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_pseudo_input" />

    <Button
        android:id="@+id/login_page_main_btn"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_shape"
        android:text="@string/login_btn_enter"
        android:textColor="#090909"
        android:clickable="true"
        app:backgroundTint="#F2FFFFFF"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:iconTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_password_input" />

    <TextView
        android:id="@+id/login_page_reset_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:onClick="showPasswordResetForm"
        android:fontFamily="@font/yugothib"
        android:text="@string/login_pwd_reset"
        android:textColor="#C8FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_main_btn"
        android:focusable="true" />

    <TextView
        android:id="@+id/login_page_register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showSubscriptionForm"
        android:fontFamily="@font/yugothib"
        android:text="@string/login_register"
        android:textColor="#C8FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_main_btn" />

    <ImageView
        android:id="@+id/login_page_facebook_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showFacebookLoginPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_social_txt"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/login_page_google_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="174dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="showGoogleLoginPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_page_facebook_img"
        app:layout_constraintTop_toBottomOf="@+id/login_page_social_txt"
        app:srcCompat="@drawable/google" />

</androidx.constraintlayout.widget.ConstraintLayout>