<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".controller.MainActivity">

    <Button
        android:id="@+id/main_page_register_btn"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/btn_shape"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/yugothib"
        android:text="@string/main_register_intro"
        android:textAllCaps="false"
        android:textColor="#A4090909"
        android:textSize="18sp"
        app:backgroundTint="#F2FFFFFF"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:iconTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_intro_txt" />

    <TextView
        android:id="@+id/main_page_intro_txt"
        android:layout_width="270dp"
        android:layout_height="74dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/yugothib"
        android:gravity="center_horizontal"
        android:text="@string/main_intro"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#BEFFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_logo_img" />

    <TextView
        android:id="@+id/main_page_copyright_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/yugothib"
        android:text="@string/login_copyright"
        android:textColor="#C8FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_login_btn" />

    <ImageView
        android:id="@+id/main_page_logo_img"
        android:layout_width="97dp"
        android:layout_height="72dp"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/main_page_login_btn"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/btn_shape"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/yugothib"
        android:text="@string/main_connect_intro"
        android:textAllCaps="false"
        android:textColor="#A4090909"
        android:textSize="18sp"
        app:backgroundTint="#F2FFFFFF"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:iconTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_intro_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>